Fix visibility issues on gallery linked caption

--- a/assets/css/ie-editor.css
+++ b/assets/css/ie-editor.css
@@ -804,6 +804,10 @@ a:hover {
 	margin-bottom: 0;
 }
 
+.wp-block-gallery figcaption a {
+	color: #fff;
+}
+
 .wp-block-group {
 	display: block;
 	clear: both;
