--- a/assets/sass/05-blocks/gallery/_editor.scss
+++ b/assets/sass/05-blocks/gallery/_editor.scss
@@ -2,5 +2,9 @@
 
 	figcaption {
 		margin-bottom: 0;
+
+		a {
+			color: var(--global--color-white);
+		}
 	}
 }
